Fixed layout spacing and footer positioning.

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,7 +1,12 @@
 //noinspection CssUnknownTarget
 @import "~root/styles/meta";
 
-#app-container {
+.AppComponent {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100vh;
+
     padding: 0;
     padding-top: $navbar-small-height + 60px;
 
